fixed neglected module spacing on laptop waybar config, darkened module background

--- a/dotfiles/waybar/.config/waybar/laptop_style.css
+++ b/dotfiles/waybar/.config/waybar/laptop_style.css
@@ -107,7 +107,7 @@ window#waybar.hidden {
 
 /* Laptop Specific Modules */
 #backlight {
-	margin-left: 16px;
+	margin-left: 12px;
     
     padding-left: 12px;
 	padding-right: 12px;
@@ -122,7 +122,7 @@ window#waybar.hidden {
 }
 
 #battery {
-	margin-left: 16px;
+	margin-left: 12px;
 	    
     padding-left: 10px;
 	padding-right: 10px;
